[package]
name = "riir-desafio-01-cotacoes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = "0.5.13"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.0", features = ["full"] }
tower = "0.4.13"
