[package]
name = "riir-desafio-01-cotacoes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = "0.5.13"
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
tower = "0.4.13"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
